# vue-tauri-remux-tool

./: package.json
.trae/documents/: 蓝光文件夹转码应用开发计划.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/services/: bluray.ts  conversion.ts  ffmpeg.ts  system.ts
src/types/: index.ts
src/utils/: index.ts
src/views/: HomeView.vue
